feat: Add authentication protection and new pages
- Integrated useSession hook from next-auth/react to check user authentication status via Github.
- Redirects unauthenticated users to the sign-in page.
- Added loading and redirection state handling.
- Improved UsersPage styling for a more user-friendly interface.
- Updated typography, spacing, and interactive elements.
- Responsive design for better adaptation to different screen sizes.
- Added AlbumsPage to display user albums.
- Added UsersPage to list all users with album counts.
- Added PhotosPage to display photos in an album with edit functionality.
- Implemented PATCH/PUT request for updating photo titles with user notification.

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGODB_URI=mongodb://streamke:jacksonkitsaofujo@185.197.195.206:27017/?directConnection=true&serverSelectionTimeoutMS=5000&appName=mongosh+2.2.0
+MONGODB_URI=mongodb+srv://tipjarr:jacksonkitsaofujo@tipjarr-production.ysusw.mongodb.net/tester?retryWrites=true&w=majority
+OAUTH_GITHUB_KEY=5544e1ae943fc85c1318
+OAUTH_GITHUB_SECRET=b786eaa2b26380f067ae19baca6aa22d9933296b
